@@ -27,6 +27,8 @@ Bugs fixed:
 - 2024019 SFCB can't handle large error messages
 - 2041967 sfcb trace messages have hard-coded size max
 
+- 2043672 Tighten SSL security for sfcb
+
 Changes in 1.3.1
 ================
 
